fix(LDS override) Also align alpha search letters to center when selected

--- a/include/LD/assets/styles/override_lds.css
+++ b/include/LD/assets/styles/override_lds.css
@@ -442,7 +442,8 @@ table.lvt td,
 td.small {
   padding: 5px;
 }
-.searchAlph {
+.searchAlph,
+.searchAlphselected {
   text-align: center;
 }
 .closeX {
